--- a/templates/manage_contributions.html
+++ b/templates/manage_contributions.html
@@ -70,8 +70,12 @@
                                       <th scope="col">Article Title</th>
                                       <th scope="col">Submission Date</th>
                                       <th scope="col">Status</th>
+                                    {% if is_cordinator %}
                                       <th class="text-center" scope="col">Action</th>
-                                      <th class="text-center" scope="col">Public Status </th>
+                                    {% endif %}
+                                    {% if is_director %}
+                                      <th class="text-center" scope="col">Public Status</th>
+                                    {% endif %}
                                     </tr>
                                   </thead>
                                   <tbody>
@@ -94,20 +98,23 @@
                                                 Waiting
                                             {% endif %}
                                         </td>
+                                        {% if is_cordinator %}
                                         <td>
                                             <div class="text-center">
                                             {% if contribution.status == 'waiting' %}
-                                                <a href="{% url 'approve_contribution' contribution.id %}" class="btn btn-success btn-sm">Approve</a> | 
+                                                <a href="{% url 'approve_contribution' contribution.id %}?approve=app" class="btn btn-success btn-sm">Approve</a> | 
                                                 <a href="{% url 'reject_contribution' contribution.id %}" class="btn btn-danger reject-btn btn-sm" data-bs-toggle="modal" data-bs-target="#rejectModal" data-contribution-id="{{ contribution.id }}">Reject</a> | 
                                                 <a href="{% url 'contributions_detail' contribution.id %}" class="btn btn-warning btn-sm">View Detail</a>
                                             {% elif contribution.status == 'approved' %}
-                                                <a href="#" class="btn btn-danger btn-sm">Disapprove</a> | 
+                                                <a href="{% url 'approve_contribution' contribution.id %}?approve=dis" class="btn btn-danger btn-sm">Disapprove</a> | 
                                                 <a href="{% url 'contributions_detail' contribution.id %}" class="btn btn-warning btn-sm">View Detail</a>
                                             {% elif contribution.status == 'rejected' %}
                                                 <a href="{% url 'contributions_detail' contribution.id %}" class="btn btn-warning btn-sm">View Detail</a>
                                             {% endif %}
                                             </div>
-                                        </td>      
+                                        </td>
+                                        {% endif %}  
+                                        {% if is_director %}    
                                         <td>
                                             <div class="text-center">
                                             {% if contribution.public %}
@@ -116,7 +123,8 @@
                                                 <a href="{% url 'public_contribution' contribution.id %}?public=pub" class="btn btn-success btn-sm">Push On</a>
                                             {% endif %}
                                           </div>
-                                        </td>            
+                                        </td>  
+                                        {% endif %}            
                                     </tr>
                                     {% endfor %}
                                   </tbody>
@@ -127,30 +135,30 @@
                     </div>
                     
                    <!-- Reject Modal -->
-<div class="modal fade" id="rejectModal" tabindex="-1" aria-labelledby="rejectModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="rejectModalLabel">Reject Contribution</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form id="rejectForm" method="post" action="">
-                    {% csrf_token %}
-                    <div class="mb-3">
-                        <label for="rejectReason" class="col-form-label">Reject Reason:</label>
-                        <textarea class="form-control" id="rejectReason" name="reject_reason" required></textarea>
+                <div class="modal fade" id="rejectModal" tabindex="-1" aria-labelledby="rejectModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="rejectModalLabel">Reject Contribution</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form id="rejectForm" method="post" action="">
+                                    {% csrf_token %}
+                                    <div class="mb-3">
+                                        <label for="rejectReason" class="col-form-label">Reject Reason:</label>
+                                        <textarea class="form-control" id="rejectReason" name="reject_reason" required></textarea>
+                                    </div>
+                                    <input type="hidden" id="contributionId" name="contribution_id">
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="submit" form="rejectForm" class="btn btn-primary">Submit Reason</button>
+                            </div>
+                        </div>
                     </div>
-                    <input type="hidden" id="contributionId" name="contribution_id">
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="submit" form="rejectForm" class="btn btn-primary">Submit Reason</button>
-            </div>
-        </div>
-    </div>
-</div>
+                </div>
 
                 </main>
                 <footer class="py-4 bg-light mt-auto">
