--- a/static/css/templatemo-edu-meeting.css
+++ b/static/css/templatemo-edu-meeting.css
@@ -1271,6 +1271,7 @@ section.our-facts h2 {
   font-weight: 700;
   letter-spacing: 0.5px;
   margin-bottom: 50px;
+  margin-top: 50px;
 }
 
 .count-area-content {
