--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -109,152 +109,76 @@ https://templatemo.com/tm-569-edu-meeting
   </header>
   <!-- ***** Header Area End ***** -->
 
-  <style>
+  {% block content %}
+  {% endblock content %}
 
-    .section main-banner{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      width: 100%;
-    }
-
-    .form-box{
-        position: relative;
-        width: 400px;
-        height: 450px;
-        background: transparent;
-        border: 2px solid rgba(46,42,42,0.5);
-        border-radius: 20px;
-        backdrop-filter: blur(15px);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 200px auto;
-    }
-
-    h2{
-        font-size: 2em;
-        color: #fff;
-        text-align: center;
-    }
-
-    .inputbox{
-        position: relative;
-        margin: 30px 0;
-        width: 310px;
-        border-bottom: 2px solid #000;
-    }
-
-    .inputbox label{
-        position: absolute;
-        top: 50%;
-        left: 5px;
-        transform: translateY(-50%);
-        color: #fff;
-        font-size: 1em;
-        pointer-events: none;
-        transition: .5s;
-    }
-
-    input:focus ~ label,
-    input:valid ~ label{
-    top: -5px;
-    }
-
-    .inputbox input {
-        width: 100%;
-        height: 50px;
-        background: transparent;
-        border: none;
-        outline: none;
-        font-size: 1em;
-        padding:0 35px 0 5px;
-        color: #fff;
-    }
-
-    .inputbox ion-icon{
-        position: absolute;
-        right: 8px;
-        color: #fff;
-        font-size: 1.2em;
-        top: 20px;
-    }
-
-    button{
-        width: 100%;
-        height: 40px;
-        border-radius: 40px;
-        background: #fff;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        font-size: 1em;
-        font-weight: 600;
-    }
-
-    button:hover{
-      background: #3CF;
-    }
-
-    .register{
-        font-size: .9em;
-        color: #000;
-        text-align: center;
-        margin: 25px 0 10px;
-    }
-
-    .register p {
-      text-decoration: none;
-      color: #fff;
-    }
-
-    .register p a{
-        text-decoration: none;
-        font-weight: 600;
-    }
-
-    .register p a:hover{
-        text-decoration: underline;
-    }
-  </style>
-
-
-  <!-- ***** Main Banner Area Start ***** -->
-  <section class="section main-banner" id="top" data-section="section1">
-    <video autoplay muted loop id="bg-video">
-      <source src="{% static 'images/course-video.mp4' %}" type="video/mp4"/>
-    </video>
-
-    <div class="video-overlay header-text">
-      <div class="form-box">
-        <div class="form-value">
-          <form class="form" method="POST" action="">
-              {% csrf_token %}
-              <h2>Login</h2>
-              <div class="inputbox">
-                  <ion-icon name="mail-outline"></ion-icon>
-                  <input type="text" name="username" required>
-                  <label for="">Username</label>
-              </div>
-              <div class="inputbox">
-                  <ion-icon name="lock-closed-outline"></ion-icon>
-                  <input type="password" name="password" required>
-                  <label for="">Password</label>
-              </div>
-              <button>Log in</button>
-              <div class="register">
-                  <p>Don't have a account? <a href="{% url "register" %}">Register</a></p>
-              </div>
-          </form>
+  <section class="contact-us" id="contact">
+    <div class="container" style="padding: 30px 0;">
+      <div class="row">
+        <div class="col-lg-9 align-self-center">
+          <div class="row">
+            <div class="col-lg-12">
+              <form id="contact" action="" method="post">
+                <div class="row">
+                  <div class="col-lg-12">
+                    <h2>Let's get in touch</h2>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="name" type="text" id="name" placeholder="YOURNAME...*" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="YOUR EMAIL..."
+                        required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="subject" type="text" id="subject" placeholder="SUBJECT...*" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <textarea name="message" type="text" class="form-control" id="message"
+                        placeholder="YOUR MESSAGE..." required=""></textarea>
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <button type="submit" id="form-submit" class="button">SEND MESSAGE NOW</button>
+                    </fieldset>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="right-info">
+            <ul>
+              <li>
+                <h6>Phone Number</h6>
+                <span>010-020-0340</span>
+              </li>
+              <li>
+                <h6>Email Address</h6>
+                <span>info@meeting.edu</span>
+              </li>
+              <li>
+                <h6>Street Address</h6>
+                <span>Rio de Janeiro - RJ, 22795-008, Brazil</span>
+              </li>
+              <li>
+                <h6>Website URL</h6>
+                <span>www.meeting.edu</span>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-  </section>
-  <!-- ***** Main Banner Area End ***** -->
-
-
-  <section class="contact-us" id="contact">
     <div class="footer">
       <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
         <br>
