--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -1,4 +1,4 @@
-{% extends "header.html" %}
+{% extends "header_footer.html" %}
 {%load static%}
 {% block content %}
 
@@ -67,94 +67,5 @@
             </form>
         </div>
     </section>
-
-    
-    <section class="contact-us" id="contact">
-      <div class="footer">
-      <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
-        <br>
-        Design: <a href="#" target="_parent" title="free css templates">Trinh, Khoi, Kiet, Ratana and Hieu.</a>
-        <br>
-        Distibuted By: <a href="#" target="_blank" title="Build Better UI, Faster">Edu Meeting Inc.</a>
-      </p>
-    </div>
-    </section>
-
-    <!-- Font Awesome (delete icon) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
-
-    <!-- Bootstrap JS and Popper.js are required for Bootstrap functionality -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.9/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
-    <!-- Scripts -->
-    <!-- Bootstrap core JavaScript -->
-    <script src="{%static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{%static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-
-    <script src="{%static 'js/isotope.min.js' %}"></script>
-    <script src="{%static 'js/owl-carousel.js' %}"></script>
-    <script src="{%static 'js/lightbox.js' %}"></script>
-    <script src="{%static 'js/tabs.js' %}"></script>
-    <script src="{%static 'js/video.js' %}"></script>
-    <script src="{%static 'js/slick-slider.js' %}"></script>
-    <script src="{%static 'js/custom.js' %}"></script>
-    <script>
-      //according to loftblog tut
-      $(".nav li:first").addClass("active");
-
-      var showSection = function showSection(section, isAnimate) {
-        var direction = section.replace(/#/, ""),
-          reqSection = $(".section").filter(
-            '[data-section="' + direction + '"]'
-          ),
-          reqSectionPos = reqSection.offset().top - 0;
-
-        if (isAnimate) {
-          $("body, html").animate(
-            {
-              scrollTop: reqSectionPos,
-            },
-            800
-          );
-        } else {
-          $("body, html").scrollTop(reqSectionPos);
-        }
-      };
-
-      var checkSection = function checkSection() {
-        $(".section").each(function () {
-          var $this = $(this),
-            topEdge = $this.offset().top - 80,
-            bottomEdge = topEdge + $this.height(),
-            wScroll = $(window).scrollTop();
-          if (topEdge < wScroll && bottomEdge > wScroll) {
-            var currentId = $this.data("section"),
-              reqLink = $("a").filter("[href*=\\#" + currentId + "]");
-            reqLink
-              .closest("li")
-              .addClass("active")
-              .siblings()
-              .removeClass("active");
-          }
-        });
-      };
-
-      $(".main-menu, .responsive-menu, .scroll-to-section").on(
-        "click",
-        "a",
-        function (e) {
-          e.preventDefault();
-          showSection($(this).attr("href"), true);
-        }
-      );
-
-      $(window).scroll(function () {
-        checkSection();
-      });
-    </script>
-  </body>
-</html>
 
 {% endblock content %}
