--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,4 +1,4 @@
-{% extends "header.html" %}
+{% extends "header_footer.html" %}
 {%load static%}
 {% block content %}
 
@@ -107,96 +107,5 @@
         </section>
       </div>
     </section>
-    <section class="contact-us" id="contact">
-      <div class="footer">
-      <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
-        <br>
-        Design: <a href="#" target="_parent" title="free css templates">Trinh, Khoi, Kiet, Ratana and Hieu.</a>
-        <br>
-        Distibuted By: <a href="#" target="_blank" title="Build Better UI, Faster">Edu Meeting Inc.</a>
-      </p>
-    </div>
-    </section>
-
-    <script src="{%static 'vendor/jquery/jquery.min.js' %}"></script>
-    <script src="{%static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-
-    <script src="{%static 'js/isotope.min.js' %}"></script>
-    <script src="{%static 'js/owl-carousel.js' %}"></script>
-    <script src="{%static 'js/lightbox.js' %}"></script>
-    <script src="{%static 'js/tabs.js' %}"></script>
-    <script src="{%static 'js/video.js' %}"></script>
-    <script src="{%static 'js/slick-slider.js' %}"></script>
-    <script src="{%static 'js/custom.js' %}"></script>
-    <script>
-      $(".nav li:first").addClass("active");
-
-      var showSection = function showSection(section, isAnimate) {
-        var direction = section.replace(/#/, ""),
-          reqSection = $(".section").filter(
-            '[data-section="' + direction + '"]'
-          ),
-          reqSectionPos = reqSection.offset().top - 0;
-
-        if (isAnimate) {
-          $("body, html").animate(
-            {
-              scrollTop: reqSectionPos,
-            },
-            800
-          );
-        } else {
-          $("body, html").scrollTop(reqSectionPos);
-        }
-      };
-
-      var checkSection = function checkSection() {
-        $(".section").each(function () {
-          var $this = $(this),
-            topEdge = $this.offset().top - 80,
-            bottomEdge = topEdge + $this.height(),
-            wScroll = $(window).scrollTop();
-          if (topEdge < wScroll && bottomEdge > wScroll) {
-            var currentId = $this.data("section"),
-              reqLink = $("a").filter("[href*=\\#" + currentId + "]");
-            reqLink
-              .closest("li")
-              .addClass("active")
-              .siblings()
-              .removeClass("active");
-          }
-        });
-      };
-
-      $(".main-menu, .responsive-menu, .scroll-to-section").on(
-        "click",
-        "a",
-        function (e) {
-          e.preventDefault();
-          showSection($(this).attr("href"), true);
-        }
-      );
-
-      $(window).scroll(function () {
-        checkSection();
-      });
-
-      function toggleUploadButton() {
-        var checkBox = document.getElementById("id_term");
-        var uploadButton = document.getElementById("uploadButton");
-    
-        if (checkBox.checked == true) {
-          uploadButton.disabled = false;
-          uploadButton.classList.add("enable-hover"); // Thêm class để kích hoạt hiệu ứng hover
-        } else {
-          uploadButton.disabled = true;
-          uploadButton.classList.remove("enable-hover"); // Loại bỏ class để vô hiệu hóa hiệu ứng hover
-        }
-      }
-    
-      window.onload = toggleUploadButton;
-    </script>
-  </body>
-</html>
-
+   
 {% endblock content %}
