--- a/templates/register.html
+++ b/templates/register.html
@@ -119,19 +119,29 @@ https://templatemo.com/tm-569-edu-meeting
       width: 100%;
     }
 
-    .form-box{
-      position: relative;
-      width: 750px;
-      height: 500px;
+    .form-box {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      width: 90%; /* Đảm bảo rộng hơn trên các thiết bị nhỏ */
+      max-width: 750px; /* Giới hạn chiều rộng tối đa */
       background: transparent;
-      border: 2px solid rgba(46,42,42,0.5);
+      border: 2px solid rgba(46, 42, 42, 0.5);
       border-radius: 20px;
       backdrop-filter: blur(15px);
-      margin: 180px auto;
+      margin: 170px auto;
+      padding: 30px;
+      box-sizing: border-box;
     }
 
-    .form-value-container{
-      padding: 0 30px;
+    .form-value-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100%;
+      weight: 100%;
+      margin: 0 10px;
     }
 
     .input-container{
@@ -141,7 +151,6 @@ https://templatemo.com/tm-569-edu-meeting
     }
 
     h2{
-      margin-top: 30px;
       font-size: 2em;
       color: #fff;
       text-align: center;
@@ -150,7 +159,8 @@ https://templatemo.com/tm-569-edu-meeting
     .inputbox{
       position: relative;
       margin: 30px 0;
-      width: 310px;
+      max-width: 310px;
+      min-width: 80px;
       border-bottom: 2px solid #000;
     }
 
@@ -240,7 +250,7 @@ https://templatemo.com/tm-569-edu-meeting
       background-color: #fff;
       border: 1px solid #ccc;
       padding: 4px 6px;
-      width: 130%;
+      width: 100%;
       border-radius: 5px;
       font-size: 16px;
       box-sizing: border-box;
@@ -251,7 +261,6 @@ https://templatemo.com/tm-569-edu-meeting
       border-color: #007bff; /* Adjust this color as needed */
     }
     
-    /* Style for the dropdown arrow */
     .custom-select:after {
       content: '\25BC'; /* Unicode character for down arrow */
       position: absolute;
@@ -262,7 +271,6 @@ https://templatemo.com/tm-569-edu-meeting
       color: #555; /* Adjust this color as needed */
     }
     
-    /* Style for the options */
     .custom-select option {
       padding: 8px 12px;
     }
@@ -310,14 +318,14 @@ https://templatemo.com/tm-569-edu-meeting
                     <input type="text" name="phone" required>
                     <label for="">Phone</label>
                 </div>
-                <div class="selectbox" style="margin-bottom: 25px">
+                <div class="selectbox" style="margin-bottom: 20px">
                   <div class="row">
-                    <div class="col-3">
+                    <div class="col-4" style="margin: auto">
                       <label for="id_faculty">Role: </label>
                     </div>
                     <div class="col-7">
                       <select name="role" id="id_role" class="custom-select">
-                      <option value="" >* Choose a Role</option>
+                      <option value="" >Select ...</option>
                           {% for role in roles %}
                       <option value="{{ role.id }}" >{{ role }} </option>
                           {% endfor %}
@@ -325,14 +333,14 @@ https://templatemo.com/tm-569-edu-meeting
                     </div>
                   </div>
                 </div>
-                <div class="selectbox" style="margin-bottom: 25px">
+                <div class="selectbox" style="margin-bottom: 20px">
                   <div class="row">
-                    <div class="col-3">
+                    <div class="col-4" style="margin: auto">
                       <label for="id_faculty">Faculty: </label>
                     </div>
                     <div class="col-7">
                       <select name="faculty" id="id_faculty" class="custom-select">
-                        <option value="">* Choose a Faculty</option>
+                        <option value="">Select ...</option>
                         {% for faculty in faculties %}
                         <option value="{{ faculty.id }}">{{ faculty.name }}</option>
                         {% endfor %}
@@ -354,8 +362,73 @@ https://templatemo.com/tm-569-edu-meeting
   </section>
   <!-- ***** Main Banner Area End ***** -->
 
-
   <section class="contact-us" id="contact">
+    <div class="container" style="padding: 30px 0;">
+      <div class="row">
+        <div class="col-lg-9 align-self-center">
+          <div class="row">
+            <div class="col-lg-12">
+              <form id="contact" action="" method="post">
+                <div class="row">
+                  <div class="col-lg-12">
+                    <h2>Let's get in touch</h2>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="name" type="text" id="name" placeholder="YOURNAME...*" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="YOUR EMAIL..."
+                        required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="subject" type="text" id="subject" placeholder="SUBJECT...*" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <textarea name="message" type="text" class="form-control" id="message"
+                        placeholder="YOUR MESSAGE..." required=""></textarea>
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <button type="submit" id="form-submit" class="button">SEND MESSAGE NOW</button>
+                    </fieldset>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="right-info">
+            <ul>
+              <li>
+                <h6>Phone Number</h6>
+                <span>010-020-0340</span>
+              </li>
+              <li>
+                <h6>Email Address</h6>
+                <span>info@meeting.edu</span>
+              </li>
+              <li>
+                <h6>Street Address</h6>
+                <span>Rio de Janeiro - RJ, 22795-008, Brazil</span>
+              </li>
+              <li>
+                <h6>Website URL</h6>
+                <span>www.meeting.edu</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="footer">
       <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
         <br>
