--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -57,6 +57,7 @@ https://templatemo.com/tm-569-edu-meeting
                   <a href="{% url "manage_contributions" %}">Contribution Management</a>
               </li>
               {% endif %}
+              {% if user.is_authenticated %}
               <li class="has-sub">
                 <a href="javascript:void(0)">Contributions</a>
                 <ul class="sub-menu">
@@ -78,7 +79,8 @@ https://templatemo.com/tm-569-edu-meeting
                     </li>
                     {% endif %}
                 </ul>
-              </li>            
+              </li>  
+              {% endif %}          
               {% if can_upload and is_student and not is_cordinator and not is_director and not is_admin %}
               <li>
                 <a href="{% url 'file_upload'%}">Upload Contributions</a>
@@ -202,51 +204,72 @@ https://templatemo.com/tm-569-edu-meeting
   <script src="{%static 'js/slick-slider.js' %}"></script>
   <script src="{%static 'js/custom.js' %}"></script>
   <script>
-    //according to loftblog tut
-    $('.nav li:first').addClass('active');
+    $(".nav li:first").addClass("active");
 
     var showSection = function showSection(section, isAnimate) {
-      var
-        direction = section.replace(/#/, ''),
-        reqSection = $('.section').filter('[data-section="' + direction + '"]'),
+      var direction = section.replace(/#/, ""),
+        reqSection = $(".section").filter(
+          '[data-section="' + direction + '"]'
+        ),
         reqSectionPos = reqSection.offset().top - 0;
 
       if (isAnimate) {
-        $('body, html').animate({
-          scrollTop: reqSectionPos
-        },
-          800);
+        $("body, html").animate(
+          {
+            scrollTop: reqSectionPos,
+          },
+          800
+        );
       } else {
-        $('body, html').scrollTop(reqSectionPos);
+        $("body, html").scrollTop(reqSectionPos);
       }
-
     };
 
     var checkSection = function checkSection() {
-      $('.section').each(function () {
-        var
-          $this = $(this),
+      $(".section").each(function () {
+        var $this = $(this),
           topEdge = $this.offset().top - 80,
           bottomEdge = topEdge + $this.height(),
           wScroll = $(window).scrollTop();
         if (topEdge < wScroll && bottomEdge > wScroll) {
-          var
-            currentId = $this.data('section'),
-            reqLink = $('a').filter('[href*=\\#' + currentId + ']');
-          reqLink.closest('li').addClass('active').
-            siblings().removeClass('active');
+          var currentId = $this.data("section"),
+            reqLink = $("a").filter("[href*=\\#" + currentId + "]");
+          reqLink
+            .closest("li")
+            .addClass("active")
+            .siblings()
+            .removeClass("active");
         }
       });
     };
 
-    $('.main-menu, .responsive-menu, .scroll-to-section').on('click', 'a', function (e) {
-      e.preventDefault();
-      showSection($(this).attr('href'), true);
-    });
+    $(".main-menu, .responsive-menu, .scroll-to-section").on(
+      "click",
+      "a",
+      function (e) {
+        e.preventDefault();
+        showSection($(this).attr("href"), true);
+      }
+    );
 
     $(window).scroll(function () {
       checkSection();
     });
+
+    function toggleUploadButton() {
+      var checkBox = document.getElementById("id_term");
+      var uploadButton = document.getElementById("uploadButton");
+
+      if (checkBox.checked == true) {
+        uploadButton.disabled = false;
+        uploadButton.classList.add("enable-hover"); // Thêm class để kích hoạt hiệu ứng hover
+      } else {
+        uploadButton.disabled = true;
+        uploadButton.classList.remove("enable-hover"); // Loại bỏ class để vô hiệu hóa hiệu ứng hover
+      }
+    }
+
+    window.onload = toggleUploadButton;
   </script>
 </body>
 </html>
