commit 22: fix bugs

--- a/templates/header_footer.html
+++ b/templates/header_footer.html
@@ -184,9 +184,9 @@ https://templatemo.com/tm-569-edu-meeting
     <div class="footer">
       <p>Copyright © 2022 Edu Meeting Co., Ltd. All Rights Reserved.
         <br>
-        Develop & Design: <a href="#" target="_parent" title="free css templates">Trinh, Khoi, Kiet, Ratana and Hieu.</a>
+        Develop & Design: <a href="#" title="free css templates">Trinh, Khoi, Kiet, Ratana and Hieu.</a>
         <br>
-        Distibuted By: <a href="#" target="_blank" title="Build Better UI, Faster">Edu Meeting Inc.</a>
+        Distibuted By: <a href="#" title="Build Better UI, Faster">Edu Meeting Inc.</a>
       </p>
     </div>
   </section>
