--- a/templates/my_contribution.html
+++ b/templates/my_contribution.html
@@ -62,14 +62,18 @@
                     {% endif %}
                   </td>
                   <td>
-                      {% if can_update and not contribution.status == 'approved' and not contribution.status == 'rejected' %}
-                      <a href="{% url 'update_contribution' pk=contribution.id %}" class="btn btn-primary btn-sm">Update</a> |
-                      {% endif %}
-                      {% if not contribution.status == 'approved' %}
-                      <a href="{% url 'delete_contribution' contribution.id %}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure?');">Remove</a> | 
-                      {% endif %}
-                      <a href="{% url 'contributions_detail' contribution.id %}" class="btn btn-warning btn-sm">View Detail</a>
-                  </td>
+                    {% if can_update and not contribution.status == 'approved' and not contribution.status == 'rejected' %}
+                        <a href="{% url 'update_contribution' pk=contribution.id %}" class="btn btn-primary btn-sm">Update</a> |
+                    {% endif %}
+                
+                    {% if can_update and not contribution.status == 'approved' %}
+          
+                            <a href="{% url 'delete_contribution' contribution.id %}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure?');">Remove</a> | 
+                        
+                    {% endif %}
+                
+                    <a href="{% url 'contributions_detail' contribution.id %}" class="btn btn-warning btn-sm">View Detail</a>
+                </td>                
               </tr>
             {% empty %}
               <tr>
